--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,13 @@ allprojects {
     apply plugin: 'eclipse'
     apply plugin: 'idea'
 
+    idea {
+        module {
+            downloadJavadoc = true
+            downloadSources = true
+        }
+    }
+
     group = 'com.novadox.bigdata'
     version = "${appVersion}"
 
