--- a/bd-common/build.gradle
+++ b/bd-common/build.gradle
@@ -1,3 +1,6 @@
 dependencies {
-    compile group:"org.springframework.data", name:"spring-data-gemfire", version:"${springdataGemfireVersion}"
+    compile ("org.springframework.data:spring-data-gemfire:${springdataGemfireVersion}") {
+        exclude module:"gemfire"
+    }
+    compile group:"com.gemstone.gemfire", name:"gemfire", version:"${gemfireVersion}"
 }
