--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ buildscript {
         appVersion='1.0.0'
 
         springbootVersion='1.1.11.RELEASE'
-        springdataGemfireVersion='1.5.0.RELEASE'
-        springdataCommonsVersion='1.9.0.RELEASE'
+        springdataGemfireVersion='1.6.0.RELEASE'
+        springdataCommonsVersion='1.10.0.RELEASE'
         springAmqpVersion='1.4.3.RELEASE'
         springVersion='4.0.9.RELEASE'//'4.1.3.RELEASE'//'3.2.11.RELEASE'
         rabbitClientVersion='3.5.0'
@@ -17,7 +17,10 @@ buildscript {
         datafactoryVersion='0.8'
     }
     repositories {
-        mavenCentral()
+        //mavenCentral()
+      	maven { url "http://10.193.12.23:8081/artifactory/remote-repos" }
+        maven { url 'http://10.193.12.23:8081/artifactory/plugins-release'}
+
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springbootVersion}")
@@ -29,22 +32,19 @@ allprojects {
     apply plugin: 'eclipse'
     apply plugin: 'idea'
 
-    idea {
-        module {
-            downloadJavadoc = true
-            downloadSources = true
-        }
-    }
-
     group = 'com.novadox.bigdata'
     version = "${appVersion}"
 
     logging.captureStandardOutput LogLevel.DEBUG
 
     repositories {
-        mavenCentral()
-        maven { url "https://repo.spring.io/libs-release" }
-        maven { url 'http://repo.spring.io/milestone' }
+        //mavenCentral()
+        //maven { url "https://repo.spring.io/libs-release" }
+        //maven { url 'http://repo.spring.io/milestone' }
+        
+        maven { url "http://10.193.12.23:8081/artifactory/remote-repos" }
+        maven { url 'http://10.193.12.23:8081/artifactory/plugins-release'}
+        maven { url 'http://10.193.12.23:8081/artifactory/libs-release'}
     }
 
 
