reverted back to gemfire 7.0.2, as it casued problem in rabbit sender project!

--- a/bd-common/build.gradle
+++ b/bd-common/build.gradle
@@ -1,6 +1,3 @@
 dependencies {
-    compile ("org.springframework.data:spring-data-gemfire:${springdataGemfireVersion}") {
-        exclude module:"gemfire"
-    }
-    compile group:"com.gemstone.gemfire", name:"gemfire", version:"${gemfireVersion}"
+    compile ("org.springframework.data:spring-data-gemfire:${springdataGemfireVersion}")
 }
