--- a/bd-rabbit-fake-data-sender/build.gradle
+++ b/bd-rabbit-fake-data-sender/build.gradle
@@ -11,7 +11,7 @@ mainClassName="com.novadox.bigdata.rabbit.sender.SenderApp"
 
 
 dependencies {
-    compile project(':bd-common')
+    compile project(':bd-common-model')
     compile group:"org.springframework.boot", name:"spring-boot-starter-amqp", version:"${springbootVersion}"
     compile group:"org.fluttercode.datafactory", name:"datafactory", version:"${datafactoryVersion}"
 }
