--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,6 @@
-include 'bd-common'
+include 'bd-common-model'
+
+include 'bd-common-api'
 
 include 'bd-gemfire-server'
 
@@ -9,4 +11,5 @@ include 'bd-rabbit-fake-data-sender'
 include 'bd-rabbit-receiver-app'
 
 include 'bd-rabbit-gemfire-client'
+
 
