--- a/bd-common-api/build.gradle
+++ b/bd-common-api/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
+    compile project(":bd-common-model")
     compile ("org.springframework.data:spring-data-gemfire:${springdataGemfireVersion}")
 }
