--- a/bd-gemfire-server/src/main/config/application-local.properties
+++ b/bd-gemfire-server/src/main/config/application-local.properties
@@ -1,6 +1,6 @@
-rabbitServerHost=localhost
-rabbitServerPort=5672
-rabbitUserName=guest
-rabbitPassword=guest
-rabbitVirtualHost=/
-gfe.port=22222
+rabbit.host=localhost
+rabbit.port=5672
+rabbit.user=guest
+rabbit.password=guest
+rabbit.virtual.host=/
+gemfire.server.port=22222
