--- a/bd-rabbit-gemfire-client/build.gradle
+++ b/bd-rabbit-gemfire-client/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'spring-boot'
 
 dependencies {
-    compile project(":bd-common")
+    compile project(":bd-common-api")
     compile group: "org.springframework.boot", name: "spring-boot-starter-amqp", version: "${springbootVersion}"
     compile group: "org.springframework.boot", name: "spring-boot-starter-data-gemfire", version: "${springbootVersion}"
 }
