removed local artifactory dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,7 @@ buildscript {
         datafactoryVersion='0.8'
     }
     repositories {
-        //mavenCentral()
-      	maven { url "http://10.193.12.23:8081/artifactory/remote-repos" }
-        maven { url 'http://10.193.12.23:8081/artifactory/plugins-release'}
-
+        mavenCentral()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springbootVersion}")
@@ -38,13 +35,10 @@ allprojects {
     logging.captureStandardOutput LogLevel.DEBUG
 
     repositories {
-        //mavenCentral()
-        //maven { url "https://repo.spring.io/libs-release" }
-        //maven { url 'http://repo.spring.io/milestone' }
+        mavenCentral()
+        maven { url "https://repo.spring.io/libs-release" }
+        maven { url 'http://repo.spring.io/milestone' }
         
-        maven { url "http://10.193.12.23:8081/artifactory/remote-repos" }
-        maven { url 'http://10.193.12.23:8081/artifactory/plugins-release'}
-        maven { url 'http://10.193.12.23:8081/artifactory/libs-release'}
     }
 
 
